--- a/static/css/mainStyle.css
+++ b/static/css/mainStyle.css
@@ -1,3 +1,551 @@
-*{
-    box-sizing: content-box;
+@font-face {
+    font-weight: 300;
+    font-family: 'Pretendard-Light';
+    src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Light.woff') format('woff');
+}
+@font-face {
+    font-weight: 400;
+    font-family: 'Pretendard-Regular';
+    src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+}
+@font-face {
+    font-weight: 500;
+    font-family: 'Pretendard-Medium';
+    src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Medium.woff') format('woff');
+}
+@font-face {
+    font-weight: 600;
+    font-family: 'Pretendard-SemiBold';
+    src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-SemiBold.woff') format('woff');
+}
+@font-face {
+    font-weight: 700;
+    font-family: 'Pretendard-Bold';
+    src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Bold.woff') format('woff');
+}
+@font-face {
+    font-weight: 800;
+    font-family: 'Pretendard-ExtraBold';
+    src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-ExtraBold.woff') format('woff');
+}
+html {
+    margin:0;
+    padding:0;
+    font-size : 16px;
+}
+* {
+    box-sizing: border-box;
+}
+body, main, div, h1, h2, h3 {
+    margin: 0;
+    padding: 0;
+}
+body {
+    overflow-x: hidden;
+}
+
+.PeopleWrap {
+    display:none;
+    height: 100%;
+    overflow-x: hidden;
+}
+.AnimalWrap {
+    display:none;
+    height: 100%;
+    overflow-x: hidden;
+}
+
+.PeopleWrap.active,
+.AnimalWrap.active {
+    display: block;
+}
+ol, ul,li {
+	list-style: none;
+    display: inline-block;
+    padding: 0;
+    margin:0;
+}
+a {
+    text-decoration: none;
+    color: inherit;
+}
+::-webkit-scrollbar {
+    display: none;
+}
+
+/*color*/
+:root {
+    /* mainColor */
+    --first-color:#005AAC;
+    --second-color:#E5EEF7;
+
+    /*hoverColor*/
+    --hover-color:  #AEDEFF;
+    --hover-second-color: rgba(203,234,255,0.25);
+
+    /*backgroundColors*/
+    --body-bg-color: rgba(10,96,175,0.7);
+    --btn-bg-color:#E5EEF7;
+}
+
+
+/* tap */
+.tapwrap {
+    z-index: 99999;
+    position: fixed;
+    right:0;
+    top:100px;
+    background-color: #dadada7d;
+    backdrop-filter: blur(20px);
+    width:50px;
+    height: 50px;
+    font-size: 1.2em;
+    border-radius: 5px 0 0 5px;
+    box-shadow: 2px 2px 5px #dadada ;
+    cursor: pointer;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.tapwrap .fa-universal-access {
+    display:none;
+    color:#005AAC;
+}
+.tapwrap.people .fa-universal-access{
+    display:block;
+}
+.tapwrap.people .fa-paw{
+    display: none;
+}
+.tapwrap .fa-paw{
+    display:block;
+    color:#18A247;
+}
+
+
+/* 헤더스타일 */
+header {
+    position: fixed;
+    top:0; left:0; bottom: 0; right: 0;
+
+    margin:0;
+    padding:0 4rem;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    z-index: 100;
+    height: 100px;
+
+    background-color: transparent;
+    backdrop-filter: blur(5px);
+
+    box-shadow: 0 0 0 ;
+}
+header.sticky {
+    box-shadow: 0 3px 10px #dadada7d;
+}
+/* 로고 */
+.Logo img {
+    margin-left: 0.7rem;
+    width: 6rem;
+    cursor: pointer;
+}
+/* 메뉴 */
+.Menu {
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+}
+.Tools {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+.Tools p {
+    font-size: 0.9rem;
+    margin-left: 1rem;
+    margin-right: 0.7rem;
+    font-family: 'Pretendard-SemiBold';
+
+    cursor: pointer;
+}
+/*검색창*/
+.Tools .Search {
+    position: relative;
+
+    width: 1.9rem;
+    height: 1.9rem;
+    border-radius: 50px;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    background-color: transparent;
+    overflow: hidden;
+
+    transition: all 0.3s ease-in-out;
+    cursor: pointer;
+}
+.Tools .Search:hover {
+    background-color: var(--second-color);
+}
+.Tools .Search.active {
+    width:14rem;
+
+    background-color: var(--second-color);
+}
+.Tools i{
+    position: absolute;
+    top:0; left:0;
+    transform: translate(50%,50%);
+}
+.Tools i.active {
+    position: relative;
+    transform: translate(0,0);
+    padding-right: 0.4rem;
+    padding-top:0.1rem;
+}
+.Tools .Search .input {
+    position: relative;
+    width:11rem;
+    height: 1.9rem;
+    left: 0.5rem;
+    display: none;
+}
+.Tools .input.active {
+    display: block;
+}
+.Tools .Search .input input {
+    position: absolute;
+    top:0;
+    width:100%;
+    height: 100%;
+    border: none;
+    outline: none;
+    background-color: transparent;
+    padding: 5px 0;
+
+    font-size: 0.8rem;
+    font-family: 'Pretendard-Regular';
+}
+
+nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+nav .MainMenu {
+    margin-left: 1.1rem;
+    padding: 0.3rem 0.7rem;
+
+    font-size: 1rem;
+    font-family: 'Pretendard-SemiBold';
+
+    border-radius: 11px;
+    background-color: transparent;
+
+    cursor: pointer;
+
+    transition: background-Color 0.2s ease-in-out;
+}
+nav .MainMenu:hover {
+    background-color: var(--second-color);
+}
+
+/* 메인섹션 */
+main {
+    display: block;
+    height: 100%;
+}
+section {
+    position: relative;
+
+    margin: 0;
+    padding:0;
+
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+}
+#section {
+    transition: transform 0.5s ease;
+    overflow: hidden;
+}
+/* 메인-1번섹션 */
+.Sc1 {
+    background-color: white;
+}
+.Sc1 .Main {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+
+    padding-bottom: 5rem;
+}
+/* 1번섹션세부 */
+.MainText {
+    margin:1rem 0;
+    padding:0;
+
+    font-size: 3.5rem;
+    font-family: 'Pretendard-ExtraBold';
+}
+.MainText span {
+    color: var(--first-color);
+}
+.Mainintro {
+
+    font-size: 1.3rem;
+    font-family: 'Pretendard-SemiBold';
+    color: #9F9F9F;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.Mainintro p {
+    margin:0.2rem 0;
+    padding:0;
+}
+/* 1번섹션위치입력 */
+.PointEnter {
+    background-color: transparent;
+    
+    margin: 1.5rem 0;
+
+    max-width: 35rem;
+    width: 35rem;
+    height: 45px;
+
+    border-bottom: 2px solid var(--first-color);
+}
+.PointEnter input {
+    width: 30rem;
+
+    outline: none;
+    border: none;
+    margin-left: 1rem;
+
+    font-size: 1rem;
+    font-family: 'Pretendard-Medium';
+    color: black;
+}
+.PointEnter input::placeholder {
+    font-size: 1rem;
+    font-family: 'Pretendard-Medium';
+    color: #A0A0A0;
+}
+.PointEnter button {
+    padding-right: 0.6rem;
+    border:none;
+    background-color: transparent;
+    cursor: pointer;
+}
+.PointEnter button img {
+    width: 28px;
+    height: 28px;
+
+    transition: .25s ease-in-out;
+}
+.PointEnter button img:hover{
+    transform: translate(-2px,-2px);
+}
+form {
+    display: flex;
+    justify-content: space-between;
+}
+/* 페이지내리기버튼 */
+.downBtn {
+    position: absolute;
+    bottom: 3rem;
+    cursor: pointer;
+}
+.downBtn img {
+    width: 32px;
+    height: 32px;
+
+    animation: arrow-down ease 2s infinite;
+}
+@keyframes arrow-down {
+    0%{
+        transform: translateY(0);
+    }
+    30%{
+        transform: translateY(10px);
+    }
+}
+
+/* 메인-2번째섹션 */
+.Sc2 {
+    background: linear-gradient(to bottom, var(--body-bg-color),var(--first-color));
+}
+.Sc2 .Sub {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
+
+    padding: 10rem 6rem;
+}
+/* 2번섹션세부 */
+.SubTopWrap {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+.SubTitle {
+    width: 45rem;
+}
+.SubTitle h3{
+    font-size: 2.2rem;
+    color: rgba(255,255,255,0.7);
+    font-family: 'Pretendard-ExtraBold';
+}
+.SubTitle h1{
+    font-size: 3.5rem;
+    color: white;
+    font-family: 'Pretendard-ExtraBold';
+}
+/* 약국찾기버튼 */
+.FindBtn{
+    margin-left: 10rem;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+
+    background-color: var(--btn-bg-color);
+
+    width: 13rem;
+    height: 45px;
+    border-radius: 10px;
+
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+}
+.FindBtn:hover {
+    background-color: var(--hover-color);
+}
+.FindBtn p {
+    font-size: 1rem;
+    font-family: 'Pretendard-Medium';
+    color:var(--first-color);
+}
+.FindBtn img {
+    transition: .25s ease-in-out;
+}
+.FindBtn:hover img {
+    transform: translate(5px);
+}
+
+
+/* 설명박스 */
+.MoveBtnWrap {
+    display:flex;
+    flex-direction: row;
+}
+.box {
+    background-color: white;
+    
+    border-radius: 20px;
+
+    width:17rem;
+    height: 21rem;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    margin: 3rem 2.5rem;
+
+    cursor: pointer;
+}
+.box img {
+    width: 14rem;
+    height: 14rem;
+    margin-top: 0.5rem;
+}
+.box .BoxTitle {
+    font-size: 1.5rem;
+    font-family: 'Pretendard-Bold';
+
+    margin:0;
+    padding:0;
+}
+.box .BoxContent {
+    padding:0;
+    margin: 0.8rem 0;
+
+    font-size: 1.125rem;
+    font-family: 'Pretendard-SemiBold';
+    color: #A0A0A0;
+    line-height: 1.3;
+
+    text-align: center;
+}
+.box:hover {
+    box-shadow: 0 25px 50px var(--hover-second-color);
+
+    transform: scale(1.01);
+
+    transition: all 0.25s ease-in-out;
+}
+
+/* 푸터 */
+footer {
+    margin:0;
+    padding: 0.2rem 1rem;
+    background-color: #000000;
+}
+footer p {
+    font-size: 0.5rem;
+    color: #dadada;
+    font-family: 'Pretendard-Regular';
+}
+footer .footerText {
+    float:left;
+}
+footer .footerMem {
+    text-align: right;
+}
+
+/* 동물탭 */
+.AnimalWrap .Tools .Search:hover {
+    background-color: #E8F6ED;
+}
+.AnimalWrap nav .MainMenu:hover {
+    background-color: #E8F6ED;
+}
+.AnimalWrap .MainText span {
+    color: #18A247;
+}
+.AnimalWrap .PointEnter {
+    border-bottom: 2px solid #18A247;
+}
+.AnimalWrap .Sc2 {
+    background: linear-gradient(to bottom, rgba(92,199,129,0.8), rgba(24, 162, 71));
+}
+.AnimalWrap .FindBtn {
+    background-color: #e3ffe1;
+}
+.AnimalWrap .FindBtn p {
+    color:#18A247;
+}
+.AnimalWrap .FindBtn:hover {
+    background-color: #D1F5CE;
+}
+.box:hover {
+    box-shadow: 0 25px 50px rgba(194,239,210,0.3);
+    transform: scale(1.01);
 }
