--- a/templates/index_shh.html
+++ b/templates/index_shh.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/32afc995e9.js" crossorigin="anonymous"></script>
     <title>PharmPharm</title>
-    <link rel="stylesheet" href="/000_IdeaMarathon/PharmPharm/static/css/Style.css">
-    <script src="/000_IdeaMarathon/PharmPharm/static/js/main.js" defer></script>
+    <link rel="stylesheet" href="/000_IdeaMarathon/PharmPharm/static/css/Style_shh.css">
+    <script src="/000_IdeaMarathon/PharmPharm/static/js/main_shh.js" defer></script>
 </head>
 <body>
 
@@ -126,10 +126,10 @@
                     <span class="Article_Nav_Txt1">건<br><br></span>
                     <div class="Article_Nav_Content">
                         <span class="Article_Nav_Content_item">
-                            <button class="Article_Nav_Content_item_btn1">상담 많은 순</button>|
-                            <button class="Article_Nav_Content_item_btn2">별점 순</button>|
-                            <button class="Article_Nav_Content_item_btn2">거리순</button>|
-                            <button class="Article_Nav_Content_item_btn2">인기순</button>
+                            <button class="Article_Nav_Content_item_btn">상담 많은 순</button>|
+                            <button class="Article_Nav_Content_item_btn">별점 순</button>|
+                            <button class="Article_Nav_Content_item_btn">거리순</button>|
+                            <button class="Article_Nav_Content_item_btn">인기순</button>
                         </span>
                         <div class="search">
                             <input class="search_txt" type="text" placeholder="검색어를 입력하세요.">
@@ -162,18 +162,25 @@
                                     <div class="Modal">
                                         <div class="Modal_Content">
                                             <span class="Modal_Close">&times;</span>
-                                            <form action="#post.php" method="POST">
+                                            <form action="">
                                                 <span class="Modal_Content_Input_Label">예약일시</span>
-                                                <span class="red">*</span>
-                                                <input class="Modal_Content_Input" type="datetime-local" name="datetime" value="2023-06-30T10:30">
+                                                <span class="red">*</span><br>
+                                                <input class="Modal_Content_Input" type="datetime-local" name="datetime" value="2023-06-30T10:30"><br>
                                                 <span class="Modal_Content_Input_Label">고객명</span>
-                                                <span class="red">*</span>
-                                                <input class="Modal_Content_Input_Txt1" type="text" placeholder="고객명을 입력하세요.">
+                                                <span class="red">*</span><br>
+                                                <input class="Modal_Content_Input_Txt1" type="text" placeholder="고객명을 입력하세요."><br>
                                                 <span class="Modal_Content_Input_Label">연락처</span>
-                                                <span class="red">*</span>
-                                                <input class="Modal_Content_Input_Txt1" type="text" placeholder="연락처를 입력해주세요">
-                                                <label for="textarea">예약메모</label>
-                                                <textarea class="Modal_Content_Input_Txt2" placeholder="예약관련 내부 메모" maxlength="300"></textarea>
+                                                <span class="red">*</span><br>
+                                                <input class="Modal_Content_Input_Txt1" type="text" placeholder="연락처를 입력해주세요"><br>
+                                                <!-- <div class="text_booking">
+                                                    <label for="textarea">예약메모</label><br>
+                                                    <div class="textLengthWrap">
+                                                        <p class="textCount">(0자</p>
+                                                        <p class="textTotal">/200자)</p>
+                                                    </div>
+                                                </div> -->
+                                                <label for="textarea">예약메모</label><br>
+                                                <textarea class="Modal_Content_Input_Txt2" placeholder="예약관련 내부 메모" maxlength="300" resize:none;></textarea>
                                                 <div class="Modal_Content_Input_CS">
                                                     <button class="Modal_Content_Input_Cancel">취소</button>
                                                     <button class="Modal_Content_Input_Save">저장</button>
@@ -209,7 +216,7 @@
                                     <div class="Modal">
                                         <div class="Modal_Content">
                                             <span class="Modal_Close">&times;</span>
-                                            <form action="#post.php" method="POST">
+                                            <form action="">
                                                 <span class="Modal_Content_Input_Label">예약일시</span>
                                                 <span class="red">*</span>
                                                 <input class="Modal_Content_Input" type="datetime-local" name="datetime" value="2023-06-30T10:30">
@@ -220,7 +227,7 @@
                                                 <span class="red">*</span>
                                                 <input class="Modal_Content_Input_Txt1" type="text" placeholder="연락처를 입력해주세요">
                                                 <label for="textarea">예약메모</label>
-                                                <textarea class="Modal_Content_Input_Txt2" placeholder="예약관련 내부 메모" maxlength="300"></textarea>
+                                                <textarea class="Modal_Content_Input_Txt2" placeholder="예약관련 내부 메모" maxlength="300" resize:none;></textarea>
                                                 <div class="Modal_Content_Input_CS">
                                                     <button class="Modal_Content_Input_Cancel">취소</button>
                                                     <button class="Modal_Content_Input_Save">저장</button>
@@ -256,7 +263,7 @@
                                     <div class="Modal">
                                         <div class="Modal_Content">
                                             <span class="Modal_Close">&times;</span>
-                                            <form action="#post.php" method="POST">
+                                            <form action="">
                                                 <span class="Modal_Content_Input_Label">예약일시</span>
                                                 <span class="red">*</span>
                                                 <input class="Modal_Content_Input" type="datetime-local" name="datetime" value="2023-06-30T10:30">
@@ -267,7 +274,7 @@
                                                 <span class="red">*</span>
                                                 <input class="Modal_Content_Input_Txt1" type="text" placeholder="연락처를 입력해주세요">
                                                 <label for="textarea">예약메모</label>
-                                                <textarea class="Modal_Content_Input_Txt2" placeholder="예약관련 내부 메모" maxlength="300"></textarea>
+                                                <textarea class="Modal_Content_Input_Txt2" placeholder="예약관련 내부 메모" maxlength="300" resize:none;></textarea>
                                                 <div class="Modal_Content_Input_CS">
                                                     <button class="Modal_Content_Input_Cancel">취소</button>
                                                     <button class="Modal_Content_Input_Save">저장</button>
@@ -303,7 +310,7 @@
                                     <div class="Modal">
                                         <div class="Modal_Content">
                                             <span class="Modal_Close">&times;</span>
-                                            <form action="#post.php" method="POST">
+                                            <form action="">
                                                 <span class="Modal_Content_Input_Label">예약일시</span>
                                                 <span class="red">*</span>
                                                 <input class="Modal_Content_Input" type="datetime-local" name="datetime" value="2023-06-30T10:30">
@@ -314,7 +321,7 @@
                                                 <span class="red">*</span>
                                                 <input class="Modal_Content_Input_Txt1" type="text" placeholder="연락처를 입력해주세요">
                                                 <label for="textarea">예약메모</label>
-                                                <textarea class="Modal_Content_Input_Txt2" placeholder="예약관련 내부 메모" maxlength="300"></textarea>
+                                                <textarea class="Modal_Content_Input_Txt2" placeholder="예약관련 내부 메모" maxlength="300" resize:none;></textarea>
                                                 <div class="Modal_Content_Input_CS">
                                                     <button class="Modal_Content_Input_Cancel">취소</button>
                                                     <button class="Modal_Content_Input_Save">저장</button>
