--- a/templates/static/css/human.css
+++ b/templates/static/css/human.css
@@ -48,167 +48,229 @@ a {
     text-decoration: none;
     color: inherit;
 }
+.hr1 {
+    max-width: 88rem;
+    border: 1.5px solid #005AAC;
+    margin-top: 5.5rem;
+}
+
 .line {
     position: relative;
     width: 110rem;
     left: 2rem;
-    border: 0.02rem solid #34b962;
+    border: 0.02rem solid blue;
     top: 6rem;
 }
 .text {
     position: fixed;
-    font-size: 2rem;
+    font-size: 1.5rem;
     font-weight: bold;
     margin-left: 2rem;
     left: 6rem;
-    top: 12rem;
-    
+    top: 11rem;
+    font-family: 'Pretendard-Regular';
 }
 
 .box1 {
     position: absolute;
-    top: 20rem;
+    top: 16rem;
     left: 10rem;
-    width: 20rem;
-    height: 13.5rem;
+    width: 16rem;
+    height: 12rem;
     border-radius: 2rem;
-    background-color: #c2efd2;
+    background-color: #CBEAFF;
+}
+.image1{
+    width: 6rem ;
+    height: 6rem;
+    position: relative;
+    top: 9.9rem;
+    left: 14.1rem;
+}
+.image2{
+    width: 6rem ;
+    height: 6rem;
+    position: relative;
+    top: 2.6rem;
+    left: 35rem;
+}
+.image3{
+    width: 6rem ;
+    height: 6rem;
+    position: relative;
+    bottom: 4.5rem;
+    left: 55rem;
+}
+.image4{
+    width: 6rem ;
+    height: 6rem;
+    position: relative;
+    bottom: 12rem;
+    left: 75.5rem;
+    z-index: 1;
+}.image5{
+    width: 6rem ;
+    height: 6rem;
+    position: relative;
+    bottom: 6.5rem;
+    left: 15rem;
+}.image6{
+    width: 6rem ;
+    height: 6rem;
+    position: relative;
+    bottom: 14rem;
+    left: 35.5rem;
+}.image7{
+    width: 6rem ;
+    height: 6rem;
+    position: relative;
+    bottom: 21.5rem;
+    left: 55.3rem;
+}.image8{
+    width: 6rem ;
+    height: 6rem;
+    position: relative;
+    bottom: 29rem;
+    left: 75.5rem;
 }
 
 .text1 {
     position: relative;
-    top: 28rem;
-    font-size: 1.5rem;
+    top: 19rem;
+    font-size: 1.2rem;
     font-weight: bold;
-    left: 18rem;
+    left: 16.5rem;
+    font-family: 'Pretendard-Regular';
 }
 
 .box2 {
     position: fixed;
-    top: 20rem;
-    left: 35rem;
-    width: 20rem;
-    height: 13.5rem;
+    top: 16rem;
+    left: 30rem;
+    width: 16rem;
+    height: 12rem;
     border-radius: 2rem;
-    background-color: #c2efd2;
+    background-color: #005AAC;
 }
 
 .text2 {
     position: absolute;
-    top: 29rem;
-    font-size: 1.5rem;
+    top: 24.5rem;
+    font-size: 1.2rem;
     font-weight: bold;
-    margin-left: 40.5rem;
-    text-align: center;
+    left: 34.6rem;
+    font-family: 'Pretendard-Regular';
     
 }
 .box3 {
     position: fixed;
-    top: 20rem;
-    left: 60rem;
-    width: 20rem;
-    height: 13.5rem;
+    top: 16rem;
+    left: 50rem;
+    width: 16rem;
+    height: 12rem;
     border-radius: 2rem;
-    background-color: #18a247;
+    background-color: #CBEAFF;
 }
 
 .text3 {
     position: absolute;
-    top: 29rem;
-    font-size: 1.5rem;
+    top: 24.5rem;
+    font-size: 1.2rem;
     font-weight: bold;
-    margin-left: 65rem;
-    text-align: center;   
+    left: 54.5rem; 
+    font-family: 'Pretendard-Regular';
 }
 .box4 {
     position: fixed;
-    top: 20rem;
-    left: 85rem;
-    width: 20rem;
-    height: 13.5rem;
+    top: 16rem;
+    left: 70rem;
+    width: 16rem;
+    height: 12rem;
     border-radius: 2rem;
-    background-color: #c2efd2;
+    background-color: #CBEAFF;
 }
 
 .text4 {
     position: absolute;
-    top: 29rem;
-    font-size: 1.5rem;
+    top: 24.5rem;
+    font-size: 1.2rem;
     font-weight: bold;
-    margin-left: 93rem;
-    text-align: center;   
+    left: 74.7rem;
+    font-family: 'Pretendard-Regular';
 }
 
 .box5 {
     position: absolute;
-    top: 38rem;
+    top: 31rem;
     left: 10rem;
-    width: 20rem;
-    height: 13.5rem;
+    width: 16rem;
+    height: 12rem;
     border-radius: 2rem;
-    background-color: #c2efd2;
+    background-color: #CBEAFF;
 }
 
 .text5 {
     position: relative;
-    top: 43rem;
-    font-size: 1.5rem;
+    top: 2.6rem;
+    font-size: 1.2rem;
     font-weight: bold;
-    left: 16rem;
+    left: 16.5rem;
+    font-family: 'Pretendard-Regular';
+    z-index: 1;
 }
 .box6 {
     position: fixed;
-    top: 38rem;
-    left: 35rem;
-    width: 20rem;
-    height: 13.5rem;
+    top: 31rem;
+    left: 30rem;
+    width: 16rem;
+    height: 12rem;
     border-radius: 2rem;
-    background-color: #c2efd2;
+    background-color: #CBEAFF;
 }
 
 .text6 {
     position: absolute;
-    top: 47.3rem;
-    font-size: 1.5rem;
+    top: 39.9rem;
+    font-size: 1.2rem;
     font-weight: bold;
-    margin-left: 43rem;
-    text-align: center; 
+    left: 35rem;
+    font-family: 'Pretendard-Regular';
 }
 .box7 {
     position: fixed;
-    top: 38rem;
-    left: 60rem;
-    width: 20rem;
-    height: 13.5rem;
+    top: 31rem;
+    left: 50rem;
+    width: 16rem;
+    height: 12rem;
     border-radius: 2rem;
-    background-color: #c2efd2;
+    background-color: #CBEAFF;
 }
 
 .text7 {
     position: absolute;
-    top: 47.3rem;
-    font-size: 1.5rem;
+    top: 39.8rem;
+    font-size: 1.2rem;
     font-weight: bold;
-    margin-left: 67.5rem;
-    text-align: center;   
+    left: 56.9rem;  
+    font-family: 'Pretendard-Regular';
 }
 .box8 {
     position: fixed;
-    top: 38rem;
-    left: 85rem;
-    width: 20rem;
-    height: 13.5rem;
+    top: 31rem;
+    left: 70.1rem;
+    width: 16rem;
+    height: 12rem;
     border-radius: 2rem;
-    background-color: #c2efd2;
+    background-color: #CBEAFF;
 }
 
 .text8 {
     position: absolute;
-    top: 47.3rem;
-    font-size: 1.5rem;
+    top: 39.8rem;
+    font-size: 1.2rem;
     font-weight: bold;
-    margin-left: 93rem;
-    text-align: center;   
+    left: 76rem;   
+    font-family: 'Pretendard-Regular';
 }
 
 .sideBox {
@@ -218,7 +280,7 @@ a {
     position: relative;
     width: 2rem;
     height: 3rem;
-    background-color: #DADADA;
+    background-color: #005AAC;
     border-radius:0.8rem;
     left: 114rem;
     font-weight: bold;
@@ -229,18 +291,10 @@ a {
     position: relative;
     width: 2rem;
     height: 3rem;
-    background-color: #18A247;
+    background-color: #DADADA;
     border-radius:0.8rem;
     left: 114rem;
     font-weight: bold;
     text-align:center;
-    bottom: 1.3rem;
-    z-index: 1;
-}
-.middleline {
-    position: relative;
-    width: 95rem;
-    left: 10rem;
-    border: 0.02rem solid #DADADA;
-    top: 27rem;
+    bottom: 1.1rem;
 }
