--- a/templates/contact.html
+++ b/templates/contact.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/32afc995e9.js" crossorigin="anonymous"></script>
     <title>PharmPharm</title>
-    <link rel="stylesheet" href="/000_IdeaMarathon/PharmPharm/static/css/Style_shh.css">
-    <script src="/000_IdeaMarathon/PharmPharm/static/js/main_shh.js" defer></script>
+    <link rel="stylesheet" href="/static/css/contact.css"">
+    <script src="/static/js/contact.js" defer></script>
 </head>
 <body>
 
