--- a/static/css/comuDetailStyle.css
+++ b/static/css/comuDetailStyle.css
@@ -88,9 +88,10 @@ select::-ms-expand { display: none; }
 /* 여기서부터 직접 짠 코드 시작 */
 
 .wrap_all{
+    width:1024px;
     display: grid;
     grid-template-columns: 14fr 72fr 14fr;
-
+    margin: 0 auto;
 }
 
 .title{
