--- a/templates/HHpharm.html
+++ b/templates/HHpharm.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./css/Hpharm.css">
+    <link rel="stylesheet" href="/static/css/Hpharm.css">
     <script src="https://kit.fontawesome.com/32afc995e9.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -25,7 +25,9 @@
         
         <div class="search">
             <hr class="searchline"/>
-            <p class="searchtext">찾는 약이 없다면? 약 검색하기</p>
+            <p class="searchtext">찾는 약이 없다면? 약 검색하기 &nbsp;&nbsp;&nbsp;&nbsp;
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                &nbsp;&nbsp;&nbsp;<i class="fa-solid fa-magnifying-glass" style="color: #005aac;"></i></p>
         </div>
         <div class="container">
             <div class="firstP">
@@ -43,7 +45,7 @@
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;일요일</p>
                 <p class="redtext">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;휴무</p>
-                <p class="medi">감기/몸살 보유약 > 타이레놀/테라플루/판콜A</p>
+                <p class="medi"><br>감기/몸살 보유약 > 타이레놀/테라플루/판콜A</p>
                 
             </div>
 
@@ -82,7 +84,7 @@
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
                 <p class="redtext3">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;휴무</p>
-                <p class="medi3">감기/몸살 보유약 > X </p>
+                <p class="medi3"><br>감기/몸살 보유약 > X </p>
                 
             </div>
 
@@ -103,6 +105,9 @@
                 <p class="medi4">감기/몸살 보유약 > 타이레놀/테라플루/판콜A/콜대원 </p>
                 
             </div>
+
+            <p class="footer"><i class="fa-solid fa-caret-left" style="color: #dadada;"></i>&nbsp;&nbsp;1&nbsp;&nbsp;2&nbsp;&nbsp;&nbsp;3&nbsp;&nbsp;
+                4&nbsp;&nbsp;5&nbsp;&nbsp;<i class="fa-solid fa-caret-right" style="color: #dadada;"></i></p>
         </div>
     </main>
 </body>
