--- a/templates/animal.html
+++ b/templates/animal.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./css/animal.css">
+    <link rel="stylesheet" href="/static/css/animal.css">
     <script src="https://kit.fontawesome.com/32afc995e9.js" crossorigin="anonymous"></script>
 </head>
-<body>
-    <p class="line"></p>
+<body style="width:100%; height: 100%; overflow-x:hidden;  overflow-y:hidden;">
+    <hr class="hr1"/>
     <main>
         <main class="text">
             증상을 선택해주세요.
         </main>
+        <p class="normal">일반동물</p>
+        <p class="special">희귀동물</p>
+        <hr class="hr2"/>
         <div class="BOX">
             <p class="box1">
                 <p class="text1">감기</p>
@@ -38,8 +41,17 @@
             <p class="box8">
                 <p class="text8">영양제</p>
             </p>
+
+            <img class="image1" src="/static/img/감기.png">
+            <img class="image2" src="/static/img/소화불량.png">
+            <img class="image3" src="/static/img/심장사상충.png">
+            <img class="image4" src="/static/img/구충제.png">
+            <img class="image5" src="/static/img/기생충.png">
+            <img class="image6" src="/static/img/항생제.png">
+            <img class="image7" src="/static/img/설파제.png">
+            <img class="image8" src="/static/img/영양제.png">
         </div>  
-        <p class="middleline"></p>
+
         <div class="sideBox">
             <p class="H">H</p>
             <p class="A">A</p>
