--- a/templates/around3.html
+++ b/templates/around3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../static/css/around.css">
+    <link rel="stylesheet" href="/static/css/around.css">
     <script src="https://kit.fontawesome.com/32afc995e9.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -21,27 +21,29 @@
     <button class="button" onclick="goToPage('./around6.html')">기타</button>
   </div>
 
-  <div class="product1"><a href="https://www.coupang.com/vp/products/6559331399?itemId=14677208792&vendorItemId=81918215482&sourceType=srp_product_ads&clickEventId=b4f03e9f-4658-4124-8fd3-0b3efd6f57c0&korePlacement=15&koreSubPlacement=6&q=%EB%B0%98%EB%A0%A4%EB%8F%99%EB%AC%BC+%ED%95%AD%EC%83%9D%EC%A0%9C&itemsCount=36&searchId=fe8db46ad8fd48b29a5efe85f4cab54a&rank=5&isAddedCart=">
-    <img src="./product3-1.png" alt=""></a>
-    <h3>닥터바이</h3>
-    <h4>재채기 기관지 항생제</h4>
-    <del class="price">119,700원</del>
-    <span class="discount-price">80,700원</span>
-
-    <div class="product2"><a href="https://www.coupang.com/vp/products/172147098?itemId=492196019&vendorItemId=4246766137&pickType=COU_PICK&q=%EB%B0%98%EB%A0%A4%EB%8F%99%EB%AC%BC+%ED%95%AD%EC%83%9D%EC%A0%9C&itemsCount=36&searchId=fe8db46ad8fd48b29a5efe85f4cab54a&rank=2&isAddedCart=">
-        <img src="./product3-3.png" alt=""></a>
+  <div class="List" id="third">
+    <div class="product"><a href="https://www.coupang.com/vp/products/6559331399?itemId=14677208792&vendorItemId=81918215482&sourceType=srp_product_ads&clickEventId=b4f03e9f-4658-4124-8fd3-0b3efd6f57c0&korePlacement=15&koreSubPlacement=6&q=%EB%B0%98%EB%A0%A4%EB%8F%99%EB%AC%BC+%ED%95%AD%EC%83%9D%EC%A0%9C&itemsCount=36&searchId=fe8db46ad8fd48b29a5efe85f4cab54a&rank=5&isAddedCart=">
+      <img src="/static/img/product3-1.png" alt=""></a>
+      <h3>닥터바이</h3>
+      <h4>재채기 기관지 항생제</h4>
+      <del class="price">119,700원</del>
+      <span class="discount-price">80,700원</span>
+    </div>
+    <div class="product"><a href="https://www.coupang.com/vp/products/172147098?itemId=492196019&vendorItemId=4246766137&pickType=COU_PICK&q=%EB%B0%98%EB%A0%A4%EB%8F%99%EB%AC%BC+%ED%95%AD%EC%83%9D%EC%A0%9C&itemsCount=36&searchId=fe8db46ad8fd48b29a5efe85f4cab54a&rank=2&isAddedCart=">
+        <img src="/static/img/product3-3.png" alt=""></a>
         <h3>펫에그</h3>
         <h4>지사제</h4>
         <del class="price">18,000원</del>
         <span class="discount-price">16,190원</span>
-
-    <div class="product3"><a href="https://www.coupang.com/vp/products/1313977884?itemId=2331842757&vendorItemId=70328380057&q=%EB%B0%98%EB%A0%A4%EB%8F%99%EB%AC%BC+%ED%95%AD%EC%83%9D%EC%A0%9C&itemsCount=36&searchId=fe8db46ad8fd48b29a5efe85f4cab54a&rank=10&isAddedCart=">
-        <img src="./product3-2.png" alt=""></a>
+    </div>
+    <div class="product"><a href="https://www.coupang.com/vp/products/1313977884?itemId=2331842757&vendorItemId=70328380057&q=%EB%B0%98%EB%A0%A4%EB%8F%99%EB%AC%BC+%ED%95%AD%EC%83%9D%EC%A0%9C&itemsCount=36&searchId=fe8db46ad8fd48b29a5efe85f4cab54a&rank=10&isAddedCart=">
+        <img src="/static/img/product3-2.png" alt=""></a>
         <h3>식스스텝</h3>
         <h4>항산화제</h4>
         <del class="price">34,900원</del>
         <span class="discount-price">32,900원</span>
-</div>
+    </div>
+  </div>
 
 
 
