--- a/templates/around5.html
+++ b/templates/around5.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../static/css/around.css">
+    <link rel="stylesheet" href="/static/css/around.css">
     <script src="https://kit.fontawesome.com/32afc995e9.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -13,7 +13,7 @@
 </div>
 
 
-<div class="button-container">
+  <div class="button-container">
     <button class="button" onclick="goToPage('./around.html')">구충제</button>
     <button class="button" onclick="goToPage('./around2.html')">세정제</button>
     <button class="button" onclick="goToPage('./around3.html')">항생제</button>
@@ -22,27 +22,33 @@
     <button class="button" onclick="goToPage('./around6.html')">기타</button>
   </div>
 
-  <div class="product1"><a href="https://www.coupang.com/vp/products/1853422411?itemId=3150462741&vendorItemId=71138046560&q=%EB%8F%99%EB%AC%BC+%ED%94%BC%EB%B6%80%EC%A7%88%ED%99%98%EC%A0%9C&itemsCount=36&searchId=633cdac7f6b04598891a00379b53ef95&rank=13&isAddedCart=">
-    <img src="./product5-1.png" alt=""></a>
-    <h3>마데카스켈</h3>
-    <h4>피부연고</h4>
-    <del class="price">28,100원</del>
-    <span class="discount-price">24,000원</span>
+  <div class="List" id="fifth">
+    <div class="product"> 
+      <a href="https://www.coupang.com/vp/products/1853422411?itemId=3150462741&vendorItemId=71138046560&q=%EB%8F%99%EB%AC%BC+%ED%94%BC%EB%B6%80%EC%A7%88%ED%99%98%EC%A0%9C&itemsCount=36&searchId=633cdac7f6b04598891a00379b53ef95&rank=13&isAddedCart=">
+      <img src="/static/img/product5-1.png" alt=""></a>
+      <h3>마데카스켈</h3>
+      <h4>피부연고</h4>
+      <del class="price">28,100원</del>
+      <span class="discount-price">24,000원</span>
+    </div>
+    <div class="product">
+      <a href="https://www.coupang.com/vp/products/7070265837?itemId=17555391156&vendorItemId=86124713194&q=%EB%8F%99%EB%AC%BC+%ED%94%BC%EB%B6%80%EC%A7%88%ED%99%98%EC%A0%9C&itemsCount=36&searchId=633cdac7f6b04598891a00379b53ef95&rank=16&isAddedCart=">
+      <img src="/static/img/product5-3.png" alt=""></a>
+      <h3>센텔라</h3>
+      <h4>피부연고</h4>
+      <del class="price">22,000원</del>
+      <span class="discount-price">20,000원</span>
+    </div>
+    <div class="product">
+      <a href="https://www.coupang.com/vp/products/5696364005?itemId=9512216793&vendorItemId=74410736943&q=%EB%8F%99%EB%AC%BC+%ED%94%BC%EB%B6%80%EC%A7%88%ED%99%98%EC%A0%9C&itemsCount=36&searchId=633cdac7f6b04598891a00379b53ef95&rank=6&isAddedCart=">
+      <img src="/static/img/product5-2.png" alt=""></a>
+      <h3>디페토</h3>
+      <h4>피부영양제</h4>
+      <del class="price">215,400원</del>
+      <span class="discount-price">75,900원</span>
+    </div>
+  </div>
 
-    <div class="product2"><a href="https://www.coupang.com/vp/products/7070265837?itemId=17555391156&vendorItemId=86124713194&q=%EB%8F%99%EB%AC%BC+%ED%94%BC%EB%B6%80%EC%A7%88%ED%99%98%EC%A0%9C&itemsCount=36&searchId=633cdac7f6b04598891a00379b53ef95&rank=16&isAddedCart=">
-        <img src="./product5-3.png" alt=""></a>
-        <h3>센텔라</h3>
-        <h4>피부연고</h4>
-        <del class="price">22,000원</del>
-        <span class="discount-price">20,000원</span>
-
-    <div class="product3"><a href="https://www.coupang.com/vp/products/5696364005?itemId=9512216793&vendorItemId=74410736943&q=%EB%8F%99%EB%AC%BC+%ED%94%BC%EB%B6%80%EC%A7%88%ED%99%98%EC%A0%9C&itemsCount=36&searchId=633cdac7f6b04598891a00379b53ef95&rank=6&isAddedCart=">
-        <img src="./product5-2.png" alt=""></a>
-        <h3>디페토</h3>
-        <h4>피부영양제</h4>
-        <del class="price">215,400원</del>
-        <span class="discount-price">75,900원</span>
-</div>
 
 
 
